<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_nano_degree">My Nanodegree Apps!</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="capstone">CapStone: My Own App</string>
</resources>
